fix: card box shadow and bg color

--- a/src/components/common/patient-card/index.css
+++ b/src/components/common/patient-card/index.css
@@ -1,3 +1,9 @@
+.card-container__shadow {
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.38);
+  -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.38);
+}
+
 .card-container--image__border {
   border-radius: 50%;
   border: 3px solid blue;
