--- a/src/components/common/patient-card/index.css
+++ b/src/components/common/patient-card/index.css
@@ -6,5 +6,5 @@
 
 .card-container--image__border {
   border-radius: 50%;
-  border: 3px solid blue;
+  border: 3px solid rgb(59 130 246 / var(--tw-bg-opacity));
 }
