feat: animate collapse - change card layout

--- a/src/components/presentation/patients/index.css
+++ b/src/components/presentation/patients/index.css
@@ -1,4 +1,4 @@
 .patient-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
 }
